# esp32_thermal

./: .gitignore  CMakeLists.txt  cfg_part.csv  command  partitions.csv  sdkconfig  sdkconfig.old
components/TCA6416A/: CMakeLists.txt  TCA6416A.c  TCA6416A.h  TCA6416A_i2c.c  TCA6416A_i2c.h
components/bluetooth/: CMakeLists.txt  ble_telemetry.h  bluetooth_api.c  bluetooth_api.h  bluetooth_autocon.c  bluetooth_autocon.h  bluetooth_config_char.h  bluetooth_db.h
components/cloud/: CMakeLists.txt  cloud_api.c  cloud_api.h  cloud_config_default.h  cloud_mqtt.c
components/d6t44l/: CMakeLists.txt  d6t44l.c  d6t44l.h
components/eddystone/: CMakeLists.txt
components/io/: CMakeLists.txt  io.c  io.h
components/ota/: CMakeLists.txt  ota.c  ota.h  ota_nvs.c  ota_nvs.h
components/ota/certs/: ca_cert.pem
components/scanner/: CMakeLists.txt  hw1258.c  hw1258.h  scanner_app.c  scanner_app.h  scanner_uart.c  scanner_uart.h
components/slave/: CMakeLists.txt  slave.c  slave.h
components/smart_wifi/: CMakeLists.txt  smart_wifi.c  smart_wifi.h
components/ssd1306/: CMakeLists.txt  font8x8_basic.h  ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.c  ssd1306_fonts.h  ssd1306_tests.c  ssd1306_tests.h
components/telemetry/: CMakeLists.txt  telemetry.c  telemetry.h  telemetry_decoder.c  telemetry_decoder.h  telemetry_encoder.c  telemetry_encoder.h  telemetry_protocol.h
components/thermal/: CMakeLists.txt  MelDIR.c  MelDIR.h  thermal_spi.c  (+1 more)
components/vl53l3cx/: CMakeLists.txt  vl53l3cx.c  vl53l3cx.h
components/vl53l3cx/core/src/: vl53lx_api.c  vl53lx_api_calibration.c  vl53lx_api_core.c  vl53lx_api_preset_modes.c  vl53lx_dmax.c  vl53lx_hist_algos_gen3.c  vl53lx_hist_algos_gen4.c  vl53lx_hist_core.c  vl53lx_hist_funcs.c  vl53lx_nvm.c  vl53lx_sigma_estimate.c  vl53lx_xtalk.c
components/vl53l3cx/platform/inc/: vl53lx_platform.h  vl53lx_platform_ipp.h  vl53lx_platform_user_data.h
components/vl53l3cx/platform/src/: vl53lx_platform.c  vl53lx_platform_init.c  vl53lx_platform_ipp.c  vl53lx_platform_log.c
main/: CMakeLists.txt  main.c
(+14 files in other folders)
