idf_component_register( SRCS "vl53l3cx.c"
                            "core/src/vl53lx_api_calibration.c"
                            "core/src/vl53lx_api_core.c"
                            "core/src/vl53lx_api_debug.c"
                            "core/src/vl53lx_api_preset_modes.c"
                            "core/src/vl53lx_api.c"
                            "core/src/vl53lx_core_support.c"
                            "core/src/vl53lx_core.c"
                            "core/src/vl53lx_dmax.c"
                            "core/src/vl53lx_hist_algos_gen3.c"
                            "core/src/vl53lx_hist_algos_gen4.c"
                            "core/src/vl53lx_hist_char.c"
                            "core/src/vl53lx_hist_core.c"
                            "core/src/vl53lx_hist_funcs.c"
                            "core/src/vl53lx_nvm_debug.c"
                            "core/src/vl53lx_nvm.c"
                            "core/src/vl53lx_register_funcs.c"
                            "core/src/vl53lx_sigma_estimate.c"
                            "core/src/vl53lx_silicon_core.c"
                            "core/src/vl53lx_wait.c"
                            "core/src/vl53lx_xtalk.c"
                            "platform/src/vl53lx_platform_init.c"
                            "platform/src/vl53lx_platform_ipp.c"
                            "platform/src/vl53lx_platform_log.c"
                            "platform/src/vl53lx_platform.c"
                        INCLUDE_DIRS "core/inc" "platform/inc" "."
                        REQUIRES "")